# bevy_stat_bars

./: Cargo.toml  README.md
examples/: basic.rs  basic_interactive.rs  demo.rs  inspector.rs  interactive.rs  interpolation.rs  minimal.rs  minimal_standalone.rs  observe_resource.rs  stress.rs  stress2.rs
src/: extract_sprites.rs  extraction.rs  lib.rs
