[package]
name = "bevy_stat_bars"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "graphics", "2d", "ui"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/bevy_stat_bars"
description = "plugin for drawing floating stat bars"

[dependencies.bevy]
version = "0.8"
default-features = false
features = ["render"]

[dependencies.copyless]
version = "0.1.5"

[dev-dependencies.bevy]
version = "0.8"
default-features = true

[dev-dependencies.bevy-inspector-egui]
version = "0.13.0"